--- a/Zhou playground.ipynb
+++ b/Zhou playground.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,15 +27,15 @@
      "output_type": "stream",
      "text": [
       "test_func_val: \n",
-      " 4.945001319444042\n",
+      " 7.038824046595592\n",
       "test_func_grad_val: \n",
-      " [5.08411671 3.14113769 2.4350387  2.9669255  4.12976392]\n",
+      " [4.43842012 2.13007518 2.81552168 5.20505467 4.64008349]\n",
       "test_func_hess_val: \n",
-      " [[2.5948674  1.50611307 1.29359801 1.35762705 2.17204045]\n",
-      " [1.50611307 0.95865671 0.69628207 0.66211846 1.30708042]\n",
-      " [1.29359801 0.69628207 1.0214591  0.40185289 1.06715744]\n",
-      " [1.35762705 0.66211846 0.40185289 1.43288339 1.09011586]\n",
-      " [2.17204045 1.30708042 1.06715744 1.09011586 2.08498899]]\n"
+      " [[2.04260149 0.76979615 1.21756508 1.08151568 1.12613924]\n",
+      " [0.76979615 0.48963149 0.27547615 0.65241444 0.61787782]\n",
+      " [1.21756508 0.27547615 1.31443081 0.79625763 0.63283644]\n",
+      " [1.08151568 0.65241444 0.79625763 2.22067753 1.84243191]\n",
+      " [1.12613924 0.61787782 0.63283644 1.84243191 1.78172093]]\n"
      ]
     }
    ],
@@ -70,6 +70,75 @@
     "print(\"test_func_grad_val: \\n\", test_func_grad_val)\n",
     "print(\"test_func_hess_val: \\n\", test_func_hess_val)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: \n",
+      " [nan nan nan nan nan]\n",
+      "f: \n",
+      " nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "from algo_methods import *\n",
+    "def gradient_descent(f, f_grad, x_init, line_search_method = 'armijo', tao = 0.5, c1 = 1e-4, c2=0.9, threshold = 1e-9, max_iter = 1000):\n",
+    "    x_curr = x_init\n",
+    "    for i in range(max_iter):\n",
+    "        p_curr = -f_grad(x_curr)\n",
+    "        alpha = 1.0\n",
+    "        if line_search_method == 'armijo':\n",
+    "            alpha = armijo_line_search(f, f_grad, x_curr, tao, c1)\n",
+    "        elif line_search_method == 'wolfe':\n",
+    "            alpha = wolfe_line_search(f, f_grad, x_curr, p_curr, c1, c2)\n",
+    "        x_curr = x_curr + alpha * p_curr\n",
+    "        if np.linalg.norm(f_grad(x_curr)) < threshold:\n",
+    "            break\n",
+    "    return x_curr, f(x_curr)\n",
+    "\n",
+    "x, f = gradient_descent(test_func, test_func_grad, x, 0.01, 1000)\n",
+    "print(\"x: \\n\", x)\n",
+    "print(\"f: \\n\", f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (3931158593.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[25], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "from algo_methods import *\n",
+    "\n",
+    "\n",
+    "def Newton_CG_method(f, f_grad, f_hessian, x0, line_search_type='wolfe', tol=1e-2, \n",
+    "                     max_iteration=100, c1=0.0001, c2=0.9, eta=0.01):\n",
+    "    \n",
+    "\n",
+    "    \n"
    ]
   }
  ],
